Bug 1599163 - fix nullish coalescing operator for (void 0) case; r=jorendorff

Differential Revision: https://phabricator.services.mozilla.com/D54775